--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,7 +1,58 @@
-main {
-    padding: 2em;
+:root {
+    --sidebar-bg-color: #cacaca;
+    --chat-bg-color: #585858;
+    --chat-title-color: #b8b8b8;
 }
 
-.ContainerFormDescricao {
+main {
+    width: 100%;
+    height: 100vh;
+    display: flex;
+}
+
+/* .ContainerFormDescricao {
     width: 500px;
+} */
+
+.sidebar {
+    width: 20%;
+    height: 100%;
+    background-color: var(--sidebar-bg-color);
+}
+
+.chatContainer {
+    background-color: var(--chat-bg-color);
+    width: 80%;
+    height: 100%;
+    
+    padding: 1em;
+}
+
+.chatContainer .title {
+    font-size: 24px;
+    color: var(--chat-title-color);
+
+    margin: 8px;
+}
+
+.chatContainer .logoContainer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 60px;
+    margin-bottom: 60px;
+}
+
+.chatContainer .chat {
+    position: relative;
+}
+
+.chatContainer .chat .chatText {
+    border-radius: 15px;
+}
+
+.chatContainer .chat button {
+    position: absolute;
+    bottom: 6px;
+    right: 6px;
 }
