--- a/public/css/app.css
+++ b/public/css/app.css
@@ -26,6 +26,8 @@ main {
 } */
 
 .sidebar {
+    position: relative;
+
     width: 20%;
     height: 100%;
     background-color: var(--sidebar-bg-color);
@@ -59,6 +61,19 @@ main {
     padding: 1em;
     margin-bottom: .5em;
     border-radius: 8px;
+}
+
+.sidebar .userArea {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+
+    width: 100%;
+    padding: 1em;
+
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .chatContainer {
