criar novo chat

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -80,6 +80,7 @@ main {
 
 .sidebar .sidebarMenu .menuItem:hover {
     background-color: var(--sidebar-button-color-hover);
+    cursor: pointer;
 }
 
 .sidebar .userArea {
